--- a/portfolio_eem/css/bootstrap.css
+++ b/portfolio_eem/css/bootstrap.css
@@ -29,7 +29,7 @@
   --white: #fff;
   --gray: #7E76F9;
   --gray-dark: #343a40;
-  --primary: #1A129F;
+  --primary: #00ADB5;
   --secondary: #7E76F9;
   --success: #28a745;
   --info: #17a2b8;
@@ -69,9 +69,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #EEEEEE;
   text-align: left;
-  background-color: #fff;
+  background-color: #222831;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -2569,21 +2569,34 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #1A129F;
-  border-color: #1A129F;
+  background-color:#00ADB5;
+  border-color: #00ADB5;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color:#00006f;
-  border-color: #00006f;
+  background-color:#60bdc1;
+  border-color: #60bdc1;
 }
+
+.btn-sec{
+  color: #fff;
+  background-color:#61646b;
+  border-color:#343840 ;
+}
+
+.btn-sec:hover {
+  color: #fff;
+  background-color:#cbe1e2;
+  border-color: #cbe1e2;
+}
+
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #00006f;
-  border-color: #00006f;
-  box-shadow: 0 0 0 0.2rem #00006f;
+  background-color: #60bdc1;
+  border-color: #60bdc1;
+  box-shadow: 0 0 0 0.2rem #60bdc1;
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
@@ -10054,7 +10067,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #1A129F !important;
+  color:#00adb5 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
